patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  namespace: store-test-2
spec:
  ingressClassName: nginx
  rules:
  - host: test-2.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: medusa-backend
            port:
              number: 9000
        path: /store
        pathType: Prefix
      - backend:
          service:
            name: medusa-backend
            port:
              number: 9000
        path: /admin
        pathType: Prefix
      - backend:
          service:
            name: medusa-backend
            port:
              number: 9000
        path: /app
        pathType: Prefix
      - backend:
          service:
            name: medusa-backend
            port:
              number: 9000
        path: /health
        pathType: Prefix
      - backend:
          service:
            name: medusa-backend
            port:
              number: 9000
        path: /auth
        pathType: Prefix
      - backend:
          service:
            name: medusa-backend
            port:
              number: 9000
        path: /uploads
        pathType: Prefix
      - backend:
          service:
            name: storefront
            port:
              number: 8000
        path: /
        pathType: Prefix
